--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,8 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://localhost:8888/api'
+# VUE_APP_BASE_API = 'http://localhost:8888/api'
+VUE_APP_BASE_API = 'http://116.62.196.62:8888/api'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
