--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://47.105.159.10:8888/api'
-
+# VUE_APP_BASE_API = 'http://47.105.159.10:8888/api'
+VUE_APP_BASE_API = 'http://116.62.196.62:8888/api'
